# veloq-workspace

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  README_DEV.md  baseline.txt  docker-compose.yml  fix_buffer  optimized.txt  plan.md  test_unsafe_arc  update_buffer
crates/driver/core/: Cargo.toml
crates/utils/veloq-bitset/: Cargo.toml
crates/utils/veloq-hash/: Cargo.toml
crates/utils/veloq-intrusive-linklist/: Cargo.toml  README.md
crates/utils/veloq-pod/: Cargo.toml
crates/utils/veloq-std/: Cargo.toml
crates/utils/veloq-thread/: Cargo.toml
crates/utils/veloq-tls/: Cargo.toml
crates/veloq/: Cargo.toml
crates/veloq-buf/: Cargo.toml
crates/veloq-buf/benches/: alloc_bench.rs
crates/veloq-buf/src/: buffer.rs  heap.rs  lib.rs
crates/veloq-sync/: Cargo.toml
crates/veloq-sync/benches/: mutex_bench.rs
crates/veloq-sync/src/: lib.rs  mpmc.rs  mpsc.rs  mutex.rs  oneshot.rs  rwlock.rs  shim.rs  waker.rs
crates/veloq-sync/tests/: loom_mpmc.rs  loom_mpsc.rs  loom_mutex.rs  loom_oneshot.rs  loom_rwlock.rs  mutex.rs  rwlock.rs
crates/veloq/benches/: fs_benchmark.rs
crates/veloq/src/: config.rs  error.rs  lib.rs  runtime.rs
crates/veloq/tests/: buffer_test.rs  fs.rs  local.rs  runtime_context.rs  sync.rs  tcp.rs  time.rs  udp.rs
platform-drivers/veloq-driver-uring/: Cargo.toml
platform-drivers/veloq-driver-uring/src/: config.rs  driver.rs  error.rs  inner.rs  lib.rs  net.rs  op.rs
test-utils/rustc-guard/: Cargo.toml
test-utils/rustc-guard/src/: main.rs
test-utils/xtest-runner/: Cargo.toml
test-utils/xtest-runner/src/: main.rs
utils/veloq-atomic-waker/: Cargo.toml
utils/veloq-atomic-waker/src/: lib.rs
utils/veloq-atomic-waker/tests/: loom_register.rs
utils/veloq-blocking/: Cargo.toml
utils/veloq-blocking/src/: blocking_ops.rs  lib.rs
utils/veloq-deque/: Cargo.toml
utils/veloq-deque/src/: deque.rs  lib.rs
utils/veloq-deque/tests/: loom_deque.rs
utils/veloq-shim/: Cargo.toml
utils/veloq-shim/src/: lib.rs
utils/veloq-storage/: Cargo.toml
utils/veloq-storage/src/: atomic.rs  lib.rs  local.rs  macros.rs  option_arc.rs  option_box.rs  pointer.rs
utils/veloq-storage/tests/: storage_test.rs
utils/veloq-wheel/: Cargo.toml
utils/veloq-wheel/benches/: wheel_bench.rs
veloq/: Cargo.toml
veloq-buf/: Cargo.toml
veloq-buf/benches/: alloc_bench.rs
veloq-buf/src/: block.rs  buffer.rs  global.rs  heap.rs  lib.rs  os.rs
veloq-buf/src/buffer/: any.rs  buddy.rs  common.rs  error.rs  handle.rs  hybrid.rs  slot_pool.rs  superblock.rs
veloq-buf/src/heap/: buddy.rs  cache.rs  pool.rs  slot.rs  superblock.rs  units.rs
veloq-buf/src/os/: linux.rs
veloq-buf/tests/: hybrid_perf.rs
veloq-driver/: Cargo.toml
veloq-driver-core/: Cargo.toml
veloq-driver-core/src/: driver.rs  error.rs  handle.rs  lib.rs  net.rs  op.rs  op_registry.rs  raw_handle.rs  slot.rs
veloq-driver-core/tests/: loom_completion.rs
veloq-driver/src/: config.rs  driver.rs  lib.rs  op.rs  unix.rs  windows.rs
veloq-driver/src/driver/: iocp.rs  op_registry.rs  slot.rs  stable_slab.rs  uring.rs
veloq-examples/disk-bench/: Cargo.toml
veloq-examples/disk-bench/src/: main.rs
veloq-local/: Cargo.toml
veloq-local/benches/: mpsc_poll_bench.rs  oneshot_bench.rs  spsc_bench.rs  stream_bench.rs
veloq-local/src/: common.rs  lib.rs  mpsc.rs  oneshot.rs  spsc.rs
veloq-local/tests/: mpsc.rs  oneshot.rs  spsc.rs
veloq-runtime/: Cargo.toml
veloq-runtime-next/: Cargo.toml
veloq-runtime-next/examples/: basic.rs
veloq-runtime-next/src/: lib.rs  macros.rs  runtime.rs  scope.rs  task.rs
veloq-runtime-next/src/runtime/: context.rs  executor.rs  primitives.rs  shared.rs
veloq-runtime-next/src/task/: arena.rs  header.rs  nodes.rs  scope.rs
veloq-runtime-next/src/utils/: deque.rs  fast_rand.rs  ownership.rs  storage.rs
veloq-runtime-next/tests/: local_task_test.rs  panic_test.rs  scope_local_test.rs  select_test.rs  task_affinity_test.rs  worker_init_test.rs
veloq-runtime/benches/: fs_benchmark.rs  net_benchmark.rs  net_tokio_compare_bench.rs  runtime_init_bench.rs  sync_alloc_bench.rs
veloq-runtime/examples/: basic.rs
veloq-runtime/src/: config.rs  error.rs  io.rs  lib.rs  macros.rs  net.rs  runtime.rs  scope.rs  task.rs  tests.rs  utils.rs
veloq-runtime/src/fs/: file.rs  open_options.rs
veloq-runtime/src/io/: compat.rs
veloq-runtime/src/net/: common.rs  socket.rs  tcp.rs  udp.rs
veloq-runtime/src/runtime/: context.rs  coop.rs  coordinator.rs  executor.rs  join.rs  primitives.rs  route.rs  shared.rs  task.rs
veloq-runtime/src/scope/: completion.rs  guard.rs  join.rs  router.rs
veloq-runtime/src/task/: arena.rs  header.rs  nodes.rs  scope.rs
veloq-runtime/src/tests/: basic.rs  buffer_test.rs  fs.rs  select_test.rs  socket_opts.rs  spawn_to_test.rs  tcp.rs  time.rs  udp.rs
veloq-runtime/src/time/: interval.rs  sleep.rs  timeout.rs
veloq-runtime/src/utils/: fast_rand.rs  ownership.rs  storage.rs
veloq-runtime/tests/: build_test.rs  compat_test.rs  coop.rs  join_cancel_test.rs  local_task_test.rs  panic_test.rs  scope_local_test.rs  select_test.rs  task_affinity_test.rs  worker_init_test.rs
veloq-runtime/tests/ui/: local_scope_not_send_sync.rs  local_scope_not_send_sync.stderr  scope_spawn_boxed_lifetime_fail.rs  scope_spawn_boxed_lifetime_fail.stderr  task_lifetime_fail.rs  task_lifetime_fail.stderr
veloq-sync/: Cargo.toml
veloq-sync/benches/: mutex_bench.rs
veloq-sync/src/: mpmc.rs  mpsc.rs  mutex.rs  oneshot.rs  rwlock.rs  shim.rs  waker.rs
veloq-sync/tests/: bug1_repro.rs  mpmc.rs  mpsc.rs
veloq/benches/: fs_benchmark.rs
veloq/src/: config.rs  error.rs  fs.rs  io.rs  lib.rs  net.rs  runtime.rs  time.rs
veloq/src/fs/: error.rs  file.rs  open_options.rs
veloq/src/net/: common.rs  error.rs  route.rs  socket.rs  tcp.rs  udp.rs
veloq/src/runtime/: context.rs
veloq/src/time/: error.rs  interval.rs  sleep.rs  timeout.rs
veloq/tests/: buffer_test.rs  fs.rs  local.rs  runtime_context.rs  tcp.rs  time.rs  udp.rs
veloq/tests/local/: mpsc.rs  oneshot.rs  spsc.rs
veloq/tests/sync/: mpmc.rs  mpsc.rs  (+1 more)
(+492 files in other folders)
