[workspace]
members = [
    "veloq",
    "veloq-runtime",
    "veloq-sync",
    "veloq-buf", 
    "veloq-driver-core",
    "veloq-examples/disk-bench",
    "platform-drivers/veloq-driver-uring",
    "platform-drivers/veloq-driver-iocp",
    "veloq-driver",
    "utils/veloq-shim",
    "utils/veloq-atomic-waker", 
    "utils/veloq-intrusive-linklist", 
    "utils/veloq-bitset",
    "utils/veloq-wheel", 
    "utils/veloq-blocking",
    "utils/veloq-pod", 
    "test-utils/xtest-runner"
]
default-members = [
    "veloq",
    "veloq-runtime",
    "veloq-sync",
    "veloq-buf",
    "veloq-driver-core",
    "veloq-driver",
    "veloq-examples/disk-bench",
    "utils/veloq-shim",
    "utils/veloq-atomic-waker",
    "utils/veloq-intrusive-linklist",
    "utils/veloq-bitset",
    "utils/veloq-wheel",
    "utils/veloq-blocking",
    "utils/veloq-pod",
    "test-utils/xtest-runner"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Shao G. <shaogme@gmail.com>"]
repository = "https://github.com/shaogme/veloq"
description = "An asynchronous Rust runtime based on the completion model."
readme = "README.md"
homepage = "https://github.com/shaogme/veloq"
documentation = "https://docs.rs/veloq"
keywords = ["async", "runtime", "io-uring", "iocp", "completion-based"]
categories = ["asynchronous", "network-programming"]

[workspace.dependencies]

# Internal Crates
veloq = { path = "veloq", version = "0.1.0", features = ["test-hooks"] }
veloq-runtime = { path = "veloq-runtime", version = "0.1.0" }
veloq-sync = { path = "veloq-sync", version = "0.1.0" }
veloq-local = { path = "veloq-local", version = "0.1.0" }
veloq-buf = { path = "veloq-buf", version = "0.1.0" }
veloq-driver-core = { path = "veloq-driver-core", version = "0.1.0" }
veloq-driver-uring = { path = "platform-drivers/veloq-driver-uring", version = "0.1.0" }
veloq-driver-iocp = { path = "platform-drivers/veloq-driver-iocp", version = "0.1.0" }
veloq-driver = { path = "veloq-driver", version = "0.1.0" }

veloq-shim = { path = "utils/veloq-shim", version = "0.1.0" }
veloq-atomic-waker = { path = "utils/veloq-atomic-waker", version = "0.1.0" }
veloq-intrusive-linklist = { path = "utils/veloq-intrusive-linklist", version = "0.1.0" }
veloq-bitset = { path = "utils/veloq-bitset", version = "0.1.0" }
veloq-wheel = { path = "utils/veloq-wheel", version = "0.1.0" }
veloq-blocking = { path = "utils/veloq-blocking", version = "0.1.0" }
veloq-pod = { path = "utils/veloq-pod", version = "0.1.0" }

# External Crates
crossbeam-utils = { version = "0.8", default-features = false }
futures-core = "0.3"
crossbeam-queue = "0.3"
libc = "0.2.183"
windows-sys = { version = "0.61", features = [
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Memory",
] }
tracing = "0.1.44"
parking_lot = "0.12"
bilge = "0.3.0"
diagweave = "0.1.1"

clap = { version = "4.6", features = ["derive"] }
loom = "0.7.2"
criterion = { version = "0.8", features = ["async_tokio"] }

tokio = { version = "1", features = ["full"] }
slotmap = "1.1.1"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
cognitive_complexity = { level = "deny", priority = 1 }
