[workspace]
members = [
    "crates/veloq",
    "crates/veloq-runtime",
    "crates/veloq-sync",
    "crates/veloq-buf",
    "crates/veloq-local",
    "examples/disk-bench",
    "crates/driver/core",
    "crates/driver/backend/uring",
    "crates/driver/backend/iocp",
    "crates/driver/native",
    "crates/utils/veloq-shim",
    "crates/utils/veloq-atomic-waker", 
    "crates/utils/veloq-intrusive-linklist", 
    "crates/utils/veloq-bitset",
    "crates/utils/veloq-wheel", 
    "crates/utils/veloq-blocking",
    "crates/utils/veloq-pod", 
    "crates/utils/veloq-tls",
    "crates/utils/veloq-storage",
    "crates/utils/veloq-hash",
    "crates/utils/veloq-std",
    "crates/test-utils/xtest-runner"
]
default-members = [
    "crates/veloq",
    "crates/veloq-runtime",
    "crates/veloq-sync",
    "crates/veloq-buf",
    "crates/veloq-local",
    "crates/driver/core",
    "crates/driver/native",
    "examples/disk-bench",
    "crates/utils/veloq-shim",
    "crates/utils/veloq-atomic-waker",
    "crates/utils/veloq-intrusive-linklist",
    "crates/utils/veloq-bitset",
    "crates/utils/veloq-wheel",
    "crates/utils/veloq-blocking",
    "crates/utils/veloq-pod",
    "crates/utils/veloq-tls",
    "crates/utils/veloq-storage",
    "crates/utils/veloq-hash",
    "crates/utils/veloq-std",
    "crates/test-utils/xtest-runner"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Shao G. <shaogme@gmail.com>"]
repository = "https://github.com/shaogme/veloq"
description = "An asynchronous Rust runtime based on the completion model."
readme = "README.md"
homepage = "https://github.com/shaogme/veloq"
documentation = "https://docs.rs/veloq"
keywords = ["async", "runtime", "io-uring", "iocp", "completion-based"]
categories = ["asynchronous", "network-programming"]

[workspace.dependencies]

# Internal Crates
veloq = { path = "crates/veloq", version = "0.1.0", features = ["test-hooks"] }
veloq-runtime = { path = "crates/veloq-runtime", version = "0.1.0" }
veloq-sync = { path = "crates/veloq-sync", version = "0.1.0" }
veloq-local = { path = "crates/veloq-local", version = "0.1.0" }
veloq-buf = { path = "crates/veloq-buf", version = "0.1.0" }
veloq-driver-core = { path = "crates/driver/core", version = "0.1.0" }
veloq-driver-uring = { path = "crates/driver/backend/uring", version = "0.1.0" }
veloq-driver-iocp = { path = "crates/driver/backend/iocp", version = "0.1.0" }
veloq-driver-native = { path = "crates/driver/native", version = "0.1.0" }

veloq-shim = { path = "crates/utils/veloq-shim", version = "0.1.0" }
veloq-atomic-waker = { path = "crates/utils/veloq-atomic-waker", version = "0.1.0" }
veloq-intrusive-linklist = { path = "crates/utils/veloq-intrusive-linklist", version = "0.1.0" }
veloq-bitset = { path = "crates/utils/veloq-bitset", version = "0.1.0" }
veloq-wheel = { path = "crates/utils/veloq-wheel", version = "0.1.0" }
veloq-blocking = { path = "crates/utils/veloq-blocking", version = "0.1.0" }
veloq-pod = { path = "crates/utils/veloq-pod", version = "0.1.0" }
veloq-tls = { path = "crates/utils/veloq-tls", version = "0.1.0" }
veloq-storage = { path = "crates/utils/veloq-storage", version = "0.1.0" }
veloq-hash = { path = "crates/utils/veloq-hash", version = "0.1.0" }
veloq-std = { path = "crates/utils/veloq-std", version = "0.1.0" }

# External Crates
crossbeam-utils = { version = "0.8", default-features = false }

crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
crossbeam-epoch = "0.9"
futures-core = "0.3"
futures-util = "0.3"
libc = "0.2.183"
windows-sys = { version = "0.61", features = [
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
tracing = "0.1.44"
parking_lot = "0.12"
bilge = "0.3.0"
diagweave = "0.5.2"

clap = { version = "4.6", features = ["derive"] }
loom = "0.7.2"
criterion = { version = "0.8", features = ["async_tokio"] }

tokio = { version = "1", features = ["full"] }
slotmap = "1.1.1"

rustc-hash = "2.1.1"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
cognitive_complexity = { level = "deny", priority = 1 }
