[package]
name = "veloq-driver-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
test-hooks = []

[dependencies]
veloq-atomic-waker.workspace = true
veloq-buf.workspace = true

crossbeam-utils.workspace = true
crossbeam-queue.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[lints]
workspace = true
