[package]
name = "veloq-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
test-hooks = [
    "veloq-driver-core/test-hooks",
    "veloq-driver-uring/test-hooks",
    "veloq-driver-iocp/test-hooks",
]

[dependencies]
veloq-atomic-waker.workspace = true
veloq-buf.workspace = true
veloq-driver-core.workspace = true
veloq-wheel.workspace = true
veloq-blocking.workspace = true
veloq-bitset.workspace = true

crossbeam-utils.workspace = true
crossbeam-queue.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"
libc.workspace = true
veloq-driver-uring.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
veloq-driver-iocp.workspace = true

[lints]
workspace = true
