[package]
name = "veloq-local"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures-core.workspace = true
veloq-intrusive-linklist.workspace = true

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true

[[bench]]
name = "stream_bench"
harness = false

[[bench]]
name = "mpsc_poll_bench"
harness = false

[[bench]]
name = "spsc_bench"
harness = false

[[bench]]
name = "oneshot_bench"
harness = false

[lints]
workspace = true