[package]
name = "veloq-runtime-next"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
crossbeam-queue.workspace = true
libc.workspace = true
parking_lot.workspace = true

[lints]
workspace = true