[package]
name = "veloq-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
crossbeam-queue.workspace = true
libc.workspace = true
parking_lot.workspace = true
numaperf-topo = "0.1"
veloq-atomic-waker.workspace = true
veloq-intrusive-linklist.workspace = true
veloq-tls.workspace = true
atomic-tagged-ptr = { version = "0.1.0", features = ["parking_lot"] }

[lints]
workspace = true
