[package]
name = "veloq"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veloq-runtime-next.workspace = true
veloq-buf.workspace = true

[lints]
workspace = true