[package]
name = "veloq"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veloq-runtime-next.workspace = true
veloq-buf.workspace = true
veloq-driver.workspace = true
error-stack.workspace = true

[dev-dependencies]
veloq-blocking.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[lints]
workspace = true
