[package]
name = "veloq"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = []
test-hooks = ["veloq-driver/test-hooks"]

[dependencies]
veloq-runtime.workspace = true
veloq-buf.workspace = true
veloq-driver.workspace = true
veloq-blocking.workspace = true
veloq-sync.workspace = true
veloq-local.workspace = true
tracing.workspace = true
diagweave.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
veloq-driver = { workspace = true, features = ["test-hooks"] }

[lints]
workspace = true
