[package]
name = "veloq-buf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veloq-bitset.workspace = true
veloq-intrusive-linklist.workspace = true
crossbeam-utils.workspace = true
parking_lot.workspace = true
tracing.workspace = true
bilge.workspace = true
diagweave.workspace = true

[features]
loom = ["veloq-intrusive-linklist/loom"]

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile = "3"
criterion.workspace = true
core_affinity = "0.8"

[[bench]]
name = "alloc_bench"
harness = false

[lints]
workspace = true
