[package]
name = "veloq-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veloq-intrusive-linklist.workspace = true
veloq-atomic-waker.workspace = true
veloq-shim.workspace = true

crossbeam-utils.workspace = true
futures-core.workspace = true
crossbeam-queue.workspace = true

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true

[dependencies.loom]
workspace = true
features = ["futures"]
optional = true

[lints]
workspace = true

[features]
default = ["veloq-shim/alloc"]
loom = ["dep:loom", "veloq-atomic-waker/loom", "veloq-intrusive-linklist/loom", "veloq-shim/loom", "veloq-shim/alloc"]

[[bench]]
name = "mutex_bench"
harness = false
