[package]
name = "veloq-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veloq-intrusive-linklist.workspace = true
veloq-waker.workspace = true
veloq-std.workspace = true

futures-core.workspace = true
crossbeam-queue.workspace = true

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true

[dependencies.loom]
workspace = true
features = ["futures"]
optional = true

[lints]
workspace = true

[features]
loom = [
    "dep:loom",
    "veloq-std/loom",
    "veloq-waker/loom",
    "veloq-intrusive-linklist/loom",
]
std = [
    "veloq-std/std",
    "veloq-intrusive-linklist/std",
    "veloq-waker/std",
]

[[bench]]
name = "mutex_bench"
harness = false
