[package]
name = "veloq-driver-uring"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
test-hooks = ["veloq-driver-core/test-hooks"]

[dependencies]
veloq-driver-core.workspace = true
veloq-buf.workspace = true
veloq-wheel.workspace = true
veloq-bitset.workspace = true

crossbeam-queue.workspace = true
tracing.workspace = true

io-uring = "0.7.11"
libc.workspace = true

[lints]
workspace = true
