[package]
name = "veloq-atomic-waker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veloq-shim.workspace = true

[features]
loom = ["veloq-shim/loom"]

[dev-dependencies]
loom.workspace = true

[lints]
workspace = true