[package]
name = "veloq-blocking"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
crossbeam-queue.workspace = true
parking_lot.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[lints]
workspace = true
