[package]
name = "veloq-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
parking_lot.workspace = true
crossbeam-epoch.workspace = true

[lints]
workspace = true
