[package]
name = "veloq-wheel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
slotmap = "1.0"
[[bench]]
name = "wheel_bench"
harness = false

[dev-dependencies]
criterion.workspace = true
