[package]
name = "disk-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
veloq-runtime.workspace = true
