[package]
name = "disk-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
clap.workspace = true
rand = "0.10"
veloq-runtime.workspace = true

[lints]
workspace = true