[package]
name = "veloq-driver-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
test-hooks = []
loom = [
    "veloq-std/loom",
    "veloq-waker/loom",
    "veloq-buf/loom",
]
std = [
    "veloq-std/std",
    "veloq-waker/std",
    "veloq-buf/std",
]

[dependencies]
veloq-waker.workspace = true
veloq-buf.workspace = true
veloq-std.workspace = true

crossbeam-utils.workspace = true
tracing.workspace = true
diagweave.workspace = true

bilge.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
loom.workspace = true

[lints]
workspace = true
