[package]
name = "veloq-std"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Veloq std implementation."
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hashbrown = { version = "0.17.1", default-features = false, features = ["alloc"] }
veloq-hash.workspace = true
