[package]
name = "veloq-std"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Veloq std implementation."
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hashbrown = { version = "0.17.1", default-features = false, features = ["alloc"] }
veloq-hash.workspace = true
veloq-thread.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.183", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Performance"] }
