[package]
name = "veloq-thread"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []

