[package]
name = "veloq-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
libc.workspace = true
windows-sys = { workspace = true, features = ["Win32_System_Threading"] }
